fix(store): 마감 시간이 자정을 넘기는 가게도 올바르게 필터링되도록 수정 (#62, #67)